# hira_pm

./: Jenkinsfile
backend/: .env.example  .gitignore  main.py  public_key.pem  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2acc88e21cdb_added_is_deleted_soft_delete_column.py  61981a5a83f3_add_columns_project_name_and_is_deleted_.py  b465bcb3de70_initial_model_create_and_seeds.py  fde0e3a4290a_add_column_is_active_in_organizations_.py
backend/app/auth/: login_route.py  login_schema.py  login_service.py
backend/app/core/config/: config.py
backend/app/core/database/: db.py
backend/app/enum/: project_type.py  role_type.py  subscription_type.py  task_state.py
backend/app/models/: attachment.py  comment.py  organization.py  policy.py  project.py  project_member.py  role.py  subscription.py  task.py  user_policy.py  users.py  workflow_column.py
backend/app/organization/: organization_repository.py  organization_routes.py  organization_schema.py  organization_service.py
backend/app/projects/: project_repository.py  project_routes.py  project_schema.py  project_service.py
backend/app/roles/: role_repository.py  role_service.py
backend/app/user_policy/: user_policy_repository.py  user_policy_routes.py  user_policy_schema.py  user_policy_service.py
backend/app/users/: user_repository.py  user_schema.py  user_service.py
backend/app/utils/email/: email_service.py
backend/app/utils/jwt_auth/: jwt_helper.py
backend/app/utils/otp_service/: otp_handler.py
backend/app/utils/passwords/: password_helper.py
frontend/: .env  index.html  (+4 more)
(+92 files in other folders)
