[project]
name = "hira"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu Deshmukh",email = "priyanshu.deshmukh@coditas.com"}
]
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "cryptography (>=48.0.1,<49.0.0)",
    "boto3 (>=1.43.27,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
